--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.7.2",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.5",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
