--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.0",
     "firebase": "^10.7.2",
     "lucide-react": "^0.309.0",
+    "mongoose": "^8.1.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.5",
     "next-themes": "^0.2.1",
