--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.5",
     "next-themes": "^0.2.1",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
